Apply negative focus offset to ensure focus is always visible

--- a/src/stylesheets/components/_footer.scss
+++ b/src/stylesheets/components/_footer.scss
@@ -81,6 +81,11 @@
   &--button {
     width: 100%;
     border: 0;
+
+    &:not([disabled]):focus {
+      // Apply negative focus offset to ensure that entire focus ring is visible
+      @include focus-outline(null, null, null, "neg-05");
+    }
   }
 }
 
